--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="min-h-screen bg-gray-200 text-[#50656d]">
+	<body data-sveltekit-preload-data="hover" class="min-h-screen">
 		<div class="contents min-h-screen">%sveltekit.body%</div>
 	</body>
 </html>
