--- a/src/app.html
+++ b/src/app.html
@@ -5,6 +5,29 @@
 		<link rel="icon" href="%sveltekit.assets%/favicon.svg" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<meta name="color-scheme" content="dark light">
+		<script>
+			// Early theme detection to prevent flash
+			(function() {
+				function getTheme() {
+					// Check for saved preference
+					const saved = document.cookie.split(';').find(c => c.trim().startsWith('theme='));
+					if (saved) {
+						const theme = saved.split('=')[1]?.trim();
+						if (theme === 'light' || theme === 'dark') return theme;
+						if (theme === 'auto') {
+							// Auto mode - check system preference
+							return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+						}
+					}
+					
+					// No saved preference - check system preference (default to auto)
+					return window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+				}
+				
+				const theme = getTheme();
+				document.documentElement.className = document.documentElement.className.replace(/theme-\w+/, 'theme-' + theme);
+			})();
+		</script>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover" class="min-h-screen">
